PROJECT(parport)
SET(PROJECT_VERSION 1.0)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
INCLUDE(FindPkgConfig)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
MACRO(CMAKE_USE_FULL_RPATH install_rpath)
    SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
    SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE) 
    SET(CMAKE_INSTALL_RPATH ${install_rpath})
    SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
ENDMACRO(CMAKE_USE_FULL_RPATH)
CMAKE_USE_FULL_RPATH("${CMAKE_INSTALL_PREFIX}/lib")

ADD_LIBRARY(parport SHARED parport.cc)

ADD_EXECUTABLE(parport_test parport_test.cc)
TARGET_LINK_LIBRARIES(parport_test parport)

INSTALL(TARGETS parport
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib)
INSTALL(FILES parport.hh DESTINATION include)

CONFIGURE_FILE(Doxyfile.in Doxyfile @ONLY)
ADD_CUSTOM_TARGET(doc doxygen Doxyfile)

CONFIGURE_FILE(parport.pc.in parport.pc @ONLY)
INSTALL(FILES ${CMAKE_BINARY_DIR}/parport.pc DESTINATION lib/pkgconfig)

